[metadata]
name = length-extension-tool
version = 0.1.0
author = Nguyen Chuong Vo 
author_email = viensea1106@gmail.com
description = A pure python tool to implement/exploit the hash length extension attack
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viensea1106/hash-length-extension
license = MIT
license_file = License.txt
keywords = hash length extension, md5, sha1, sha224, sha256, sha512
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Topic :: Security
    Topic :: Security :: Cryptography
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = HashTools

[options.extras_require]
testing =
    pytest